{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "39ab2674-0f31-4911-b2f4-83ce2cf650f6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0d630569-e1f6-4d94-960c-8ea8ba3120f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "d13b304f-c3b2-40dc-a12c-0c6f9d3561d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d51d4a51-a4e1-4e79-b4b0-4e0259fc1e1e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ee668fa5-56eb-4577-806b-d76676ce66d4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cce3f8bd-11c2-45d3-a661-0e6ccb055bef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "57f92748-2eb5-4d5b-8b90-e07b3f9a376c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e2e93364-f936-4188-848a-fc35d205e44d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4071f09f-3a60-4899-ba18-250a65e2597b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game Other",
            "id": "e9b94d96-2adf-48ea-ab8d-a3e6286a55f6",
            "actions": [
                {
                    "name": "Mouse Position",
                    "type": "Value",
                    "id": "4d0ee128-17e3-4546-8736-05f56be58151",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PerformAction",
                    "type": "Button",
                    "id": "6dd9b350-72dd-4b97-af46-de5b46802a03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "dfbe92e8-93f8-4e47-be21-1ca02f44bbf8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bfdba9f-43ba-465a-ba4a-44fe26e5d85e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ba16495-b7e1-48a6-b8fb-cd5a478666a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea7ee682-dfcb-4cd7-b4bb-dae7027126f7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}